[package]
name = "web-scraper"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
url = "2.5"
bytes = "1" # <-- Add this line back, but with version "1"
colored = "2"
scraper = "0.19" # Needed for trpl::Html if it wraps scraper
# If your trpl crate is a local path or git repo, add it like:
# trpl = { path = "../path/to/trpl_crate" }
